--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -86,6 +86,13 @@ body {
     .sidebar-styles;
   }
 
+  #main-panel {
+    h3 {
+      text-align: center;
+      width: 100%;
+    }
+  }
+
   #site-search {
     margin-right: 10px;
     float: right;
