--- a/app/assets/stylesheets/admin.less
+++ b/app/assets/stylesheets/admin.less
@@ -9,12 +9,5 @@
 
 // Remember: This form sits outside the admin area;
 #edit-user-form, #new-user-form {
-
-  .inline-form;
-  .heading-styles;
-  .centered (50%);
-
-  #buttons {
-    .form-button-bar (15%);
-  }
+  .standard-edit-form ();
 }
