--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -41,6 +41,7 @@
               <th>User Name</th>
               <th>Email</th>
               <th>Password</th>
+              <th>Actions</th>
             </tr>
             <!--
               When handling the AJAX query for the list of users, the
