--- a/app/views/admin/edituser.scala.html
+++ b/app/views/admin/edituser.scala.html
@@ -11,12 +11,7 @@
 @main("Edit User", additionalHead = Some(head), currentUser = Some(currentUser)) {
 
   <div class="span12">
-    @editForm.globalError.map { error =>
-      <div class="alert alert-error">
-        <button type="button" class="close" data-dismiss="alert">x</button>
-        @error.message
-      </div>
-    }
+    @form_errors(editForm)
 
     <a href="@adminRoutes.Admin.index()" class="btn btn-link">
       <i class="icon-arrow-left"></i> Back to admin
