Rearranged admin routes and views to make things more consistent.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,7 +6,6 @@
 @import play._
 @import play.mvc._
 @import helper._
-@import controllers.admin.{routes => adminRoutes}
 
 <!DOCTYPE html>
 
@@ -64,7 +63,7 @@
 
               @if(user.isAdmin) {
                 <li>
-                  <a href="@adminRoutes.Admin.index()">
+                  <a href="@routes.AdminController.index()">
                     <i class="icon-wrench"></i>Admin
                   </a>
                 </li>
