--- a/app/views/users/makeNew.scala.html
+++ b/app/views/users/makeNew.scala.html
@@ -1,28 +1,24 @@
-@(editUser: User, currentUser: User, editForm: Form[models.User])(implicit flash: Flash)
+@(currentUser: User, newUserForm: Form[models.User])(implicit flash: Flash)
 
 @import helper._
 @import helper.twitterBootstrap._
-@import controllers.admin.{routes => adminRoutes}
 
 @head = {
-  <script src="@routes.Assets.at("javascripts/admin.js")"></script>
+  <script src="@routes.Assets.at("javascripts/admin.min.js")"></script>
 }
 
-@main("Edit User", additionalHead = Some(head), currentUser = Some(currentUser)) {
+@main("New User", additionalHead = Some(head), currentUser = Some(currentUser)) {
 
   <div class="span12">
-    @form_errors(editForm)
+    @form_errors(newUserForm)
+    @back(routes.UserController.index(), "Back")
 
-    <a href="@adminRoutes.Admin.index()" class="btn btn-link">
-      <i class="icon-arrow-left"></i> Back to admin
-    </a>
+    <div id="new-user-form" class="well">
+      <div class="heading">Create a new user</div>
 
-    <div id="edit-user-form" class="well">
-      <div class="heading">Edit user @editUser.username</div>
-
-      @form(action = adminRoutes.UserAdmin.updateUser(editUser.id.get)) {
+      @form(action = routes.UserController.create) {
         @inputText(
-          editForm("username"),
+          newUserForm("username"),
           args = 'size             -> 16,
                  'id               -> "username",
                  '_label           -> "Username",
@@ -30,7 +26,7 @@
                  '_placeholder     -> "user name"
         )
         @inputPassword(
-          editForm("password"),
+          newUserForm("password"),
           args = 'size             -> 16,
                  'id               -> "password",
                  '_label           -> "Password",
@@ -38,7 +34,7 @@
                  '_placeholder     -> "password"
         )
         @inputPassword(
-          editForm("password_confirmation"),
+          newUserForm("password_confirmation"),
           args = 'size             -> 16,
                  'id               -> "password-confirmation",
                  '_label           -> "Password (again)",
@@ -46,11 +42,10 @@
                  '_placeholder     -> "password (again)"
         )
         @checkbox(
-          editForm("isAdmin"),
+          newUserForm("isAdmin"),
           args = 'id               -> "is-admin",
                  '_label           -> "Administrator"
         )
-        <input type="hidden" name="id" value="@editUser.id"/>
 
         <div id="buttons">
           <button class="btn btn-primary">Save</button>
