--- a/app/views/users/makeNew.scala.html
+++ b/app/views/users/makeNew.scala.html
@@ -4,7 +4,7 @@
 @import helper.twitterBootstrap._
 
 @head = {
-  <script src="@routes.Assets.at("javascripts/admin.min.js")"></script>
+  <script src="@routes.Assets.at("javascripts/users.min.js")"></script>
 }
 
 @main("New User", additionalHead = Some(head), currentUser = Some(currentUser)) {
