--- a/app/views/sites/edit.scala.html
+++ b/app/views/sites/edit.scala.html
@@ -1,10 +1,7 @@
 @(site: Site, currentUser: User, editForm: Form[models.Site])(implicit flash: Flash)
 
-@import helper._
-@import helper.twitterBootstrap._
-
 @head = {
-  <script src="@routes.Assets.at("javascripts/site.min.js")" type="text/javascript"></script>
+  <script src="@routes.Assets.at("javascripts/sites.min.js")" type="text/javascript"></script>
 }
 
 @main("Main", additionalHead = Some(head), currentUser = Some(currentUser)) {
@@ -16,56 +13,14 @@
     <div id="edit-site-form" class="well">
       <div class="heading">Edit user @site.name</div>
 
-      @form(action = routes.SiteController.update(site.id.get)) {
-        @inputText(
-          editForm("name"),
-          args = 'id               -> "name",
-                 '_label           -> "Site Name",
-                 '_showConstraints -> false,
-                 '_placeholder     -> "A name for this site"
-        )
-        @inputText(
-          editForm("username"),
-          args = 'id               -> "username",
-                 '_label           -> "Username",
-                 '_showConstraints -> false,
-                 '_placeholder     -> "user name"
-        )
-        @inputText(
-          editForm("email"),
-          args = 'id               -> "email",
-                 '_label           -> "Email Address",
-                 '_showConstraints -> false,
-                 '_placeholder     -> "email addressed used with web site"
-        )
-        @inputText(
-          editForm("password"),
-          args = 'id               -> "password",
-                 '_label           -> "Password",
-                 '_showConstraints -> false,
-                 '_placeholder     -> "password"
-        )
-        @inputText(
-          editForm("url"),
-          args = 'id               -> "url",
-                 '_label           -> "Web site",
-                 '_showConstraints -> false,
-                 '_placeholder     -> "Web site URL"
-        )
-        @textarea(
-          editForm("notes"),
-          args = 'rows             -> 20,
-                 'cols             -> 50,
-                 'id               -> "notes",
-                 '_label           -> "Notes",
-                 '_showConstraints -> false
-        )
-        <input type="hidden" name="userID" value="@site.userID"/>
+        @BasicSiteForm(editForm, routes.SiteController.update(site.id.get)) {
+          <input type="hidden" name="userID" value="@site.userID"/>
 
-        <div id="buttons">
-          <button class="btn btn-primary">Save</button>
-        </div>
-      }
+          <div id="buttons">
+            <button class="btn btn-primary">Save</button>
+         </div>
+       }
+
     </div>
   </div>
 }
