--- a/app/views/sites/index.scala.html
+++ b/app/views/sites/index.scala.html
@@ -1,7 +1,7 @@
 @(currentUser: User, count: Option[Long] = None)(implicit flash: Flash)
 
 @head = {
-  <script src="@routes.Assets.at("javascripts/site.min.js")" type="text/javascript"></script>
+  <script src="@routes.Assets.at("javascripts/sites.min.js")" type="text/javascript"></script>
 }
 
 @main("Main", additionalHead = Some(head), currentUser = Some(currentUser)) {
