--- a/app/views/users/edit.scala.html
+++ b/app/views/users/edit.scala.html
@@ -1,10 +1,9 @@
 @(editUser: User, currentUser: User, editForm: Form[models.User])(implicit flash: Flash)
 
-@import helper._
-@import helper.twitterBootstrap._
+@import tags._
 
 @head = {
-  <script src="@routes.Assets.at("javascripts/users.min.js")"></script>
+  @scriptAsset("javascripts/users.min.js")
 }
 
 @main("Edit User", additionalHead = Some(head), currentUser = Some(currentUser)) {
