--- a/app/views/sites/index.scala.html
+++ b/app/views/sites/index.scala.html
@@ -1,7 +1,9 @@
 @(currentUser: User, count: Option[Long] = None)(implicit flash: Flash)
 
+@import tags._
+
 @head = {
-  <script src="@routes.Assets.at("javascripts/sites.min.js")" type="text/javascript"></script>
+  @scriptAsset("javascripts/sites.min.js")
 }
 
 @main("Main", additionalHead = Some(head), currentUser = Some(currentUser)) {
