--- a/app/assets/stylesheets/_mixins.less
+++ b/app/assets/stylesheets/_mixins.less
@@ -83,6 +83,11 @@
   #loader {
     float: right;
   }
+
+  .stat {
+    font-size: @baseFontSize - 2px;
+    font-style: italic;
+  }
 }
 
 .standard-edit-form (@width: 50%, @buttonBarWidth: 15%) {
