Moved form_errors partial into tags, renamed it to formErrors, and changed all callers. Added it to login template.

--- a/app/views/sites/edit.scala.html
+++ b/app/views/sites/edit.scala.html
@@ -9,7 +9,7 @@
 @main("Main", additionalHead = Some(head), currentUser = Some(currentUser)) {
 
   <div class="span12">
-    @form_errors(editForm)
+    @formErrors(editForm)
     @back(routes.Application.index(), "Back")
 
     <div id="edit-site-form" class="well">
