--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -3,17 +3,13 @@
 @{/* Gets the "form" helper used below. */}
 @import helper._
 @import helper.twitterBootstrap._
+@import tags._
 
 @main("Login") {
 
   <div class="span12">
 
-    @loginForm.globalError.map { error =>
-      <div class="alert alert-error">
-        <button type="button" class="close" data-dismiss="alert">x</button>
-        @error.message
-      </div>
-    }
+    @formErrors(loginForm)
 
     <div id="login-form" class="well">
       <div class="heading">Please sign in</div>
