Cleaned up styling of login form

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -75,13 +75,7 @@ body {
 
     margin-top: 20px;
 
-    .inline-form;
-    .heading-styles;
-    .centered (50%);
-
-    #buttons {
-      .form-button-bar (15%);
-    }
+    .standard-edit-form (40%);
   }
 }
 
