--- a/app/views/sites/makeNew.scala.html
+++ b/app/views/sites/makeNew.scala.html
@@ -17,7 +17,7 @@
     <div id="new-user-form" class="well">
       <div class="heading">New site data</div>
 
-      @BasicSiteForm(newSiteForm, routes.SiteController.create) {
+      @BasicSiteForm(None, newSiteForm, routes.SiteController.create) {
         <div id="buttons">
           <button class="btn btn-primary">Save</button>
         </div>
