Icons, instead of buttons, for actions.

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -104,6 +104,11 @@ body {
   }
 }
 
+.action-button {
+  text-decoration: none;
+  margin: 2px !important;
+}
+
 #site-display {
   .centered (40%);
 
