--- a/app/views/sites/show.scala.html
+++ b/app/views/sites/show.scala.html
@@ -12,6 +12,7 @@
   <div class="span12">
 
     @searchBox()
+    @back(routes.SiteController.index(), "Back")
 
     <form id="site-display" class="well">
       <header>Site: @site.name</header>
