--- a/app/views/users/index.scala.html
+++ b/app/views/users/index.scala.html
@@ -51,13 +51,13 @@
             <td class="field-value user-username"></td>
             <td class="field-value user-admin"></td>
             <td>
-              <a class="btn btn-mini edit-user-button action-button"
+              <a class="edit-user-button action-button"
                  href="@routes.UserController.edit(-1)"> 
-                Edit
+                <i class="icon-edit"></i>
               </a>
-              <a class="btn btn-mini delete-user-button action-button"
+              <a class="delete-user-button action-button"
                  href="@routes.UserController.delete(-1)">
-                Delete
+                <i class="icon-cut"></i>
               </a>
             </td>
           </tr>
