--- a/app/views/sites/index.scala.html
+++ b/app/views/sites/index.scala.html
@@ -62,7 +62,7 @@
             <tr id="site-template" style="display:none">
               <td class="field-value">
                 <a class="site-name show-site-button action-button"
-                   href="@routes.SiteController.show(-1)"></a>
+                   href="@routes.SiteController.showJSON(-1)"></a>
               </td>
               <td class="field-value site-username"></td>
               <td class="field-value site-email"></td>
@@ -82,6 +82,21 @@
           <tbody id="site-list"></tbody>
         </table>
       </div>
+    </div>
+  </div>
+
+  <!-- Modal for showing a site -->
+  <div id="show-site-modal" class="modal fade hide">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal"
+              aria-hidden="true">&times;</button>
+      <h3 class=".show-site-name"></h3>
+    </div>
+    <div class="modal-body">
+      @ShowPartial(models.Site.Dummy)
+    </div>
+    <div class="modal-footer">
+      <a href="#" data-dismiss="modal" class="btn btn-primary">Close</a>
     </div>
   </div>
 }
