No longer using inverse navbar.

--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -1,6 +1,6 @@
 @(currentUser: Option[User])
 
-<div class="navbar navbar-fixed-top navbar-inverse">
+<div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <a class="brand">
       <img src="@routes.Assets.at("images/logo.png")" id="logo-image"/>
